[build-system]
requires = [
    "setuptools==69.0.2",
    "wheel==0.42.0",
]
build-backend = "setuptools.build_meta"

[project]
version="0.0.1"
name = "coco_test"
description = "Experimenting with coconut language"
readme = "README.md"
requires-python = ">=3.8,<3.13"
keywords = ["coconut"]
license = {file="LICENSE"}
authors=[
    {name = "Andrey Nikiforov"}
]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "coconut==3.1.1",
]

[project.optional-dependencies]
dev = [
]
test = [
    "pytest==7.4.3",
    "mock==5.1.0",
    "freezegun==1.2.2",
    "vcrpy==4.4.0",
    "pytest-cov==4.1.0",
    "ruff==0.5.0",
    "coveralls==3.3.1",
    "pytest-timeout==2.1.0",
    "pytest-xdist==3.3.1",
    "mypy==1.10.1",
    "types-mock==5.1.0.1",
]

[project.urls]
Homepage="https://github.com/AndreyNikiforov/coco_test"


[tool.pytest.ini_options]
log_format = "%(levelname)-8s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
timeout = 300
testpaths = [
    "tests",
    "src_py" # needed for doctests    
]
pythonpath = [
    "src_py"
]
addopts = "--doctest-modules"

[tool.setuptools.packages.find]
where = ["src_py"]  # list of folders that contain the packages (["."] by default)

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # long lines
    "E501",
]